tests/ui/imports/issue-28388-1.stderr
error[E0432]: unresolved import `foo`
  --> $DIR/issue-28388-1.rs:4:5
   |
LL | use foo::{};
   |     ^^^ use of unresolved module or unlinked crate `foo`
   |
help: you might be missing a crate named `foo`, add it to your project and import it in your code
   |
LL + extern crate foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
